// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AssetImage logo 1`] = `
<svg
  version="1.1"
  viewBox="0 0 151 33"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <use
    xlink:href="#todastic-logo.svg"
  />
</svg>
`;

exports[`Storyshots LoginForm failing 1`] = `
<div>
  <svg
    version="1.1"
    viewBox="0 0 151 33"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <use
      xlink:href="#todastic-logo.svg"
    />
  </svg>
   
  <form>
    <input
      name="username"
      placeholder="Username"
      type="text"
    />
     
    <input
      name="password"
      placeholder="Password"
      type="password"
    />
     
    <!---->
     
    <button
      type="submit"
    >
      Login
    </button>
  </form>
</div>
`;

exports[`Storyshots LoginForm succeeding 1`] = `
<div>
  <svg
    version="1.1"
    viewBox="0 0 151 33"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <use
      xlink:href="#todastic-logo.svg"
    />
  </svg>
   
  <form>
    <input
      name="username"
      placeholder="Username"
      type="text"
    />
     
    <input
      name="password"
      placeholder="Password"
      type="password"
    />
     
    <!---->
     
    <button
      type="submit"
    >
      Login
    </button>
  </form>
</div>
`;

exports[`Storyshots TodasticIcon Calendar 1`] = `
<svg
  class="root"
  version="1.1"
  viewBox="0 0 48 48"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <use
    xlink:href="#calendar.svg"
  />
</svg>
`;

exports[`Storyshots TodasticIcon Clock 1`] = `
<svg
  class="root"
  version="1.1"
  viewBox="0 0 48 48"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <use
    xlink:href="#clock.svg"
  />
</svg>
`;

exports[`Storyshots TodasticIcon block 1`] = `
<svg
  class="root block"
  version="1.1"
  viewBox="0 0 48 48"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <use
    xlink:href="#calendar.svg"
  />
</svg>
`;

exports[`Storyshots TodasticIcon inline text 1`] = `
<div>
  There is a 
  <svg
    class="root"
    version="1.1"
    viewBox="0 0 48 48"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <use
      xlink:href="#calendar.svg"
    />
  </svg>
   in my sentence!
</div>
`;

exports[`Storyshots TodasticLogo default 1`] = `
<div
  class="root"
>
  <svg
    version="1.1"
    viewBox="0 0 151 33"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <use
      xlink:href="#todastic-logo.svg"
    />
  </svg>
</div>
`;

exports[`Storyshots TodoItem done 1`] = `
<div>
  <span
    class="status isDone"
  />
   
  <span>
    this is a done todo
  </span>
   
  <ul />
</div>
`;

exports[`Storyshots TodoItem open 1`] = `
<div>
  <span
    class="status isOpen"
  />
   
  <span>
    this is an open todo
  </span>
   
  <ul />
</div>
`;

exports[`Storyshots TodoItem with labels 1`] = `
<div>
  <span
    class="status isOpen"
  />
   
  <span>
    this is a todo with labels
  </span>
   
  <ul>
    <li>
      foo
    </li>
    <li>
      bar
    </li>
    <li>
      baz
    </li>
    <li>
      something
    </li>
  </ul>
</div>
`;

exports[`Storyshots TodoItem/TodoItemStatus done 1`] = `
<span
  class="status isDone"
/>
`;

exports[`Storyshots TodoItem/TodoItemStatus open 1`] = `
<span
  class="status isOpen"
/>
`;
